--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ rand = "0.8"
 secp256k1 = { version = "0.24", features = ["global-context"] }
 web3 = "0.18"
 hex = "0.4"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4"
